RESOLVED FIXED118693
xmlDocPtrForString shouldn't upconvert 8-bit string
https://bugs.webkit.org/show_bug.cgi?id=118693
Summary xmlDocPtrForString shouldn't upconvert 8-bit string
Ryosuke Niwa
Reported 2013-07-15 16:04:57 PDT
xmlDocPtrForString shouldn't upconvert 8-bit string
Attachments
Fixes the bug (2.90 KB, patch)
2013-07-15 16:08 PDT, Ryosuke Niwa
msaboff: review+
Ryosuke Niwa
Comment 1 2013-07-15 16:08:53 PDT
Created attachment 206698 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2013-07-15 16:26:50 PDT
Note You need to log in before you can comment on or make changes to this bug.