xmlDocPtrForString shouldn't upconvert 8-bit string https://bugs.webkit.org/show_bug.cgi?id=118693

Reviewed by Michael Saboff.

Merge https://chromium.googlesource.com/chromium/blink/+/5d9b240db74591c3689415c7b7c5180fadb379e9

Prior to this changeset, we were upconverting the entire XML document.
Let xmllib2 parse a document as iso-8859-1 when it's a 8-bit string.

* xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::nativeEndianUTF16Encoding):
(WebCore::xmlDocPtrForString):


Canonical link: https://commits.webkit.org/136579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152667 268f45cc-cd09-0410-ab3c-d52691b4dbfc